# ComfyUI-BVortexNodes

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
js/: SubgraphNodes.js
nodes/: CaptionNodes.py  CustomDatatypes.py  DAAMNodes.py  ImageNodes.py  SubgraphNodes.py  UtilNodes.py  VectorNodes.py  __init__.py
workflows/: Flux_Captioning_with_upscale_v3.json  Flux_Captioning_without_upscale_v3.json
