[project]
name = "comfyui-bvortexnodes"
description = "This repository contains a user-defined node for ComfyUI, currently there are nodes for capturing captions and nodes that serve to insert subgraph titles, headings, separators and spacers. But will be expanded in the future."
version = "1.0.8"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/BlackVortexAI/ComfyUI-BVortexNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "blackvortex"
DisplayName = "ComfyUI-BVortexNodes"
Icon = ""
